<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_submit">提交</string>
    <string name="activate">激活</string>
    <string name="adcan">ADCAN</string>
    <string name="aftersales_functions">大屏诊断</string>
    <string name="aging_test_btn_end">停止测试</string>
    <string name="aging_test_btn_start">开始测试</string>
    <string name="aging_test_btn_testing">老化测试中…</string>
    <string name="agree_to_enter_authmode">同意授权</string>
    <string name="agreement_authmode_privacy_title">小鹏汽车远程授权模式隐私政策</string>
    <string name="agreement_authmode_protocol_tips">        欢迎使用小鹏汽车为您提供的远程诊断功能！为了给您的车辆提供定向的远程诊断服务，我们需要收集您的部分个人信息和车辆信息，以便工作人员利用远程诊断能力实现定位故障、修复问题。需注意：\n        1.并非全部问题均能远程诊断与修复，部分故障在诊断后可能仍需您预约到售后门店处理；\n        2.如果您不授权我们使用您的个人及车辆信息，我们将无法为您提供远程诊断服务，但并不影响您正常使用车辆。\n        请您仔细阅读我们的《小鹏汽车远程诊断隐私政策》。如您勾选“我已阅读并同意隐私政策”，则视为您已经充分理解我们的隐私政策并同意授权我们使用您的个人信息。</string>
    <string name="agreement_authmode_protocol_title">小鹏汽车远程授权模式用户协议</string>
    <string name="agreement_authmode_title">温馨提示</string>
    <string name="agreement_privacy_content">《小鹏汽车远程诊断隐私政策》</string>
    <string name="agreement_privacy_detail">        欢迎您使用广州智鹏车联网科技有限公司（以下简称“小鹏汽车”）为您提供的【小鹏汽车远程诊断与修复】功能。我们将按照小鹏汽车隐私政策的规定收集、使用、储存和分享您的个人信息。本政策仅是为了让您能快速浏览和了解您在使用该功能时，我们是基于什么目的如何收集、使用、储存和保护您的个人信息的。您也可以通过小鹏汽车APP-我-设置-关于小鹏-隐私条款来了解我们更详尽的隐私政策。\n        我们深知个人信息对您的重要性，并会按照业内成熟的安全标准，采取对应的安全措施来保护您的个人信息。请您在向我们提交个人信息之前，阅读、了解本声明。当您向我们提供个人信息时，即表示您已经阅读并同意本声明的条款。您可以选择不向我们提供或随时撤回、中止或终止向我们提供个人信息，但如果您选择不提供，我们可能无法为您提供相关产品或服务。\n\n·个人信息的收集和使用\n        个人信息是指以电子或者其他方式记录的能够单独或者与其他信息结合识别特定自然人身份或者反映特定自然人活动情况的各种信息。我们仅会出于本声明所描述的以下目的，收集和使用您的个人信息：\n\nA.身份识别\n        为了识别您的身份，确认您与车辆之间的关联关系，尝试定位您报障车辆的故障，在您开启本功能后，我们会记录您的车牌号、车辆VIN码、与车辆关联的账号。\n        若您不提供此类信息，我们将无法通过远程技术将您的车辆问题与后台技术库关联。您可以通过点击顶部状态栏授权图标&gt;点击“退出”，来关闭远程修复的开关。\n\nB.与您取得联系，为您提供远程技术支持\n        有些故障我们可能无法及时排除。为了向您提供复杂问题的后续服务，以实现为您远程排除故障的目的，我们需要收集您的电话号码或电子邮件，以及车辆的设备标识符，包括车辆VIN码，用户ID，终端设备的IMEI号。如果您不提供这些信息，我们将无法与您取得联系，进一步为您解决车辆故障。请注意，如果您的故障被即时排除，我们将不需要收集您的电话号码或电子邮件。\n\nC.诊断及修复车辆故障\n        为了向您提供更直接的车辆远程诊断与修复功能，在某项故障场景中，我们的技术人员将在获得您授权后，接管您的车辆大屏并尝试发起故障排除操作。为实现该目的，我们需要获得车辆的设备标识符，包括车辆VIN码，用户ID，终端设备的IMEI号；大屏的操作权限；APP的目录或路径；缓存访问权限；音响开启、播放权限；音频log；系统日志；风扇启动权限；水冷启动权限等功能。当您希望退出该远程大屏操作功能，您可以通过点击顶部状态栏授权图标&gt;点击“退出”，或终止对我们远程诊断的授权，结束此远程操作模式。\n\n\n        请您知悉，上述均为启用“远程诊断与修复”功能所必须的核心基础功能。\n\n        您可以通过随时通过拨打我们的热线电话：【400-819-3388】来取消您对我们进行的授权，或是随时通过点击顶部状态栏授权图标&gt;点击“退出”来关闭本功能。功能关闭后，我们将无法为您提供远程诊断与修复服务，您只能选择前往我们就近的门店进行监测与维修。请注意，该功能仅在您开启该项功能时收集您的个人信息。如您不开启该项功能，本功能所对应的个人信息将不会被采集。\n        我们的服务将主要面向18岁以上的成年用户。如果您是未满18岁的未成年用户，您必须在您法定监护人阅读本声明并许可的情况下，向我们提交您的个人信息，并务必在法定监护人陪同下使用该服务。\n        我们会且仅会在遵从适用法律的要求，基于适当的合法性基础对您的数据予以处理，包括：\n        （1）响应您的服务请求，处理您的个人信息；\n        （2）基于您的同意处理您的个人信息；\n        （3）基于执行法律义务和法律遵从处理您的个人信息。\n\n·向第三方服务商提供您的个人信息\n\n        若某些服务是由小鹏汽车的合作伙伴提供的，我们会依照本政策所描述的原则，在获得您明确授权的前提下，与该合作伙伴共享您的个人信息。在适用的法律要求或响应法律程序的情况下，我们也可能会向相关的执法机关或者其他政府机关披露您的个人信息。具体的内容可以通过小鹏汽车APP-我-设置-关于小鹏-隐私条款获取。\n        在此功能中，我们将不会与任何第三方服务供应商共享您的个人信息。如果在未来我们对此功能进行了拓展，进而需要与第三方共享您的个人信息，我们将重新获取您的授权同意。\n\n·您的数据主体权利\n\n        您应确保提交的所有个人信息都准确无误。我们将尽力维护您信息的准确和完整，并根据您的指示，及时更新这些数据。当适用的法律允许的情况下（包括：如果我们处理个人信息的行为违反法律法规；如果我们收集、使用您的个人信息，却未征得您的同意；如果我们处理个人信息的行为违反了与您的约定；如果我们终止服务及运营等），您可以：\n        （1）有权访问或了解、获取我们持有的关于您的个人信息；\n        （2）对您不准确的个人信息部分，要求我们更正或更新；\n        （3）不再授权我们使用您的个人信息，或是拒绝我们对您个人信息继续访问。您可以通过随时通过点击顶部状态栏授权图标&gt;点击“退出”，来关闭本功能；\n        （4）要求我们删除您的个人信息。\n        如果您想行使相关的权利，目前我们提供了拨打小鹏汽车热线电话【400-819-3388】 的方式来响应您的需求。\n        如果我们有合理依据认为您的请求存在欺诈或损害他人隐私权的情形，我们则会拒绝处理您的请求。\n\n·个人信息的保护及留存地点、期限\n\n        您的信息将被储存在中国境内。我们采用和您提供信息服务所对等的适当的物理、管理或技术保障措施来保护您的个人信息只有必要人员访问、披露、使用、修改、损坏或丢失。例如，我们会确保只有授权人员和必要人员才可访问个人信息。我们会尽力保护您的个人信息，但是请注意，任何安全措施都无法做到百分百安全和完善。另外，当我们的产品或服务发生停止运营的情形时，我们将以推送通知、公告等形式通知您，并在合理的期限内删除您的个人信息或进行匿名化处理。\n        我们及服务供应商将会在达成本声明所述目的所需的期限内保留您的个人信息。我们确定存留期的标准包括：完成该业务目的需要留存个人信息的必要时间，包括提供产品和服务，保证产品和服务的安全，应对可能的用户查询或投诉，问题定位，用户是否同意更长的留存期间等。\n        您也可以选择删除您的个人信息。在您要求删除后，我们会停止基于该信息提供的服务，并在无特殊法律要求的情况下，删除您全部的个人信息。当适用的法律要求的情况下，当我们基于您的同意处理您的个人信息时，您还有权随时撤销您的同意。但撤销同意不会影响撤销前我们基于您的同意处理您个人信息的合法性及效力，也不影响我们基于其他适当的正当性基础处理您的个人信息。\n\n·声明的更新\n        我们保留不时更新或修改本声明的权利。如果我们的声明变更，我们会将最新版声明发布在这里。如果我们对本声明做出了重大变更，我们还可能会通过不同渠道向您发送变更通知，例如，在我们的网站上发布通知或者向您发布单独的通知。只有在获取您的同意后，我们才会按照更新后的声明收集、使用、储存您的个人信息。\n\n        本声明自更新之日起生效。\n\n·如何联系我们\n        如果您有任何疑问、意见或建议，或有任何隐私投诉或问题，请拨打我们的全国客服热线400-819-3388联系我们。\n        我们的联系地址是：\n        广州市天河区长兴街松岗大街8号小鹏汽车智能产业园法务部，邮编510640。\n        如果您对我们的回复不满意，特别是当我们的个人信息处理行为损害了您的合法权益时，您还可以通过向有管辖权的人民法院提起诉讼、向行业自律协会或政府相关管理机构投诉等外部途径进行解决。\n\n        广州智鹏车联网科技有限公司\n        2020年6月16日</string>
    <string name="agreement_privacy_title">小鹏汽车远程诊断隐私政策</string>
    <string name="agreement_protocol_content">用户协议</string>
    <string name="agreement_read_content">我已经阅读并同意</string>
    <string name="ai_mdedia_found_alert">已有AI视频，是否覆盖</string>
    <string name="ai_media_data_found">检查到视频文件</string>
    <string name="ai_media_data_not_found">未检查到视频文件</string>
    <string name="alert_logictree_list_empty">逻辑树集为空，请联系总部技术支持分析确认问题点!!</string>
    <string name="already_submitted">该错误报告已经被提交，谢谢您！</string>
    <string name="als_init_fail_need_elec_check">初始化失败，请重新电检初始化</string>
    <string name="als_init_fail_need_reset">初始化学习失败，请重置初始化学习</string>
    <string name="als_init_not_finished">初始化学习进行中</string>
    <string name="als_init_success">初始化学习成功</string>
    <string name="common_cmd">常用指令信息</string>
    <string name="hardware_test">硬件检测</string>
    <string name="log">日志</string>
    <string name="nation_detection_alarm_above_all">0-18项</string>
    <string name="nation_detection_alarm_batt_bad_consistency">10-电池单体一致性差报警</string>
    <string name="nation_detection_alarm_batt_high_pressure">5-单体电池过压报警</string>
    <string name="nation_detection_alarm_batt_high_temp">1-电池高温报警</string>
    <string name="nation_detection_alarm_batt_low_pressure">6-单体电池欠压报警</string>
    <string name="nation_detection_alarm_brake_system">13-制动系统报警</string>
    <string name="nation_detection_alarm_dcdc_status">14-DC-DC状态报警</string>
    <string name="nation_detection_alarm_dcdc_temp">12-DC-DC温度报警</string>
    <string name="nation_detection_alarm_energy_high_pressure">2-车载蓄能装置类型过压报警</string>
    <string name="nation_detection_alarm_energy_low_pressure">3-车载蓄能装置类型欠压报警</string>
    <string name="nation_detection_alarm_energy_storage_over_charge">18-车载蓄能装置类型过充报警</string>
    <string name="nation_detection_alarm_energy_system_mismatch">9-可充电蓄能系统不匹配报警</string>
    <string name="nation_detection_alarm_high_pressure_interlock">16-高压互锁状态报警</string>
    <string name="nation_detection_alarm_high_soc">7-SOC过高报警</string>
    <string name="nation_detection_alarm_insulation">11-绝缘报警</string>
    <string name="nation_detection_alarm_jump_soc">8-SOC跳变报警</string>
    <string name="nation_detection_alarm_low_soc">4-SOC低报警</string>
    <string name="nation_detection_alarm_motor_brake_temp">15-驱动电机制动器温度报警</string>
    <string name="nation_detection_alarm_motor_temp">17-驱动电机温度报警</string>
    <string name="nation_detection_alarm_simulate">报警模拟</string>
    <string name="nation_detection_alarm_temp_diff">0-温度差异报警</string>
    <string name="nation_detection_return_main">返回主界面</string>
    <string name="network_on_off_test">数据网络开/关测试:</string>
    <string name="pc_tool">PC工具服务</string>
    <string name="reboot_func">重启</string>
    <string name="recovery">恢复出厂设置</string>
    <string name="run_encrypt_sh">USB-HELP</string>
    <string name="show_key_device_info">关键器件查询</string>
    <string name="switch_off">关闭</string>
    <string name="switch_on">打开</string>
    <string name="test_4g">4G</string>
    <string name="test_air_conditioner">空调</string>
    <string name="test_back_light">背光</string>
    <string name="test_back_trunk">后备箱</string>
    <string name="test_battery">电池包测试</string>
    <string name="test_bt">蓝牙</string>
    <string name="test_bt_phone">蓝牙电话</string>
    <string name="test_camera">摄像头</string>
    <string name="test_can">CAN总线</string>
    <string name="test_car_driving_recorder">行车记录仪</string>
    <string name="test_car_lamp">车灯</string>
    <string name="test_car_window">车窗</string>
    <string name="test_chair">座椅</string>
    <string name="test_charging_port">充电口</string>
    <string name="test_eeprom">EEPROM</string>
    <string name="test_fail">失败</string>
    <string name="test_gps">GPS</string>
    <string name="test_mode">车辆模式</string>
    <string name="test_music">音乐</string>
    <string name="test_ota">OTA</string>
    <string name="test_psu">PSU测试</string>
    <string name="test_quiet">静默模式</string>
    <string name="test_radio">收音机</string>
    <string name="test_record">麦克风</string>
    <string name="test_report">测试报告</string>
    <string name="test_rgb">RGB</string>
    <string name="test_rtc">RTC</string>
    <string name="test_screen_selftest">屏幕诊断</string>
    <string name="test_sdcard">SD卡</string>
    <string name="test_sensor">G-Sensor</string>
    <string name="test_sound">声音</string>
    <string name="test_speech_recognition">语音识别</string>
    <string name="test_succeed">成功</string>
    <string name="test_temperature">温度状态</string>
    <string name="test_touch_screen">触摸屏</string>
    <string name="test_usb">USB</string>
    <string name="test_wifi">WIFI</string>
    <string name="text_blower_power">风扇电源</string>
</resources>