<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.xiaopeng.devtools.view.ActionBar android:id="@+id/action_bar" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true" app:centerTextResId="@string/nation_detection_alarm_simulate"/>
    <ScrollView android:paddingTop="@dimen/padding_top_content" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_below="@+id/action_bar" android:layout_alignParentLeft="true" android:layout_alignParentStart="true">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/FactoryTestRow">
                <Button android:id="@+id/alarm_temp_diff" android:text="@string/nation_detection_alarm_temp_diff" style="@style/FactoryTestButton"/>
                <Button android:id="@+id/alarm_batt_high_temp" android:text="@string/nation_detection_alarm_batt_high_temp" style="@style/FactoryTestButton"/>
                <Button android:id="@+id/alarm_energy_high_pressure" android:text="@string/nation_detection_alarm_energy_high_pressure" style="@style/FactoryTestButton"/>
                <Button android:id="@+id/alarm_energy_low_pressure" android:text="@string/nation_detection_alarm_energy_low_pressure" style="@style/FactoryTestButton"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/FactoryTestRow">
                <Button android:id="@+id/alarm_low_soc" android:text="@string/nation_detection_alarm_low_soc" style="@style/FactoryTestButton"/>
                <Button android:id="@+id/alarm_batt_high_pressure" android:text="@string/nation_detection_alarm_batt_high_pressure" style="@style/FactoryTestButton"/>
                <Button android:id="@+id/alarm_batt_low_pressure" android:text="@string/nation_detection_alarm_batt_low_pressure" style="@style/FactoryTestButton"/>
                <Button android:id="@+id/alarm_high_soc" android:text="@string/nation_detection_alarm_high_soc" style="@style/FactoryTestButton"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/FactoryTestRow">
                <Button android:id="@+id/alarm_jump_soc" android:text="@string/nation_detection_alarm_jump_soc" style="@style/FactoryTestButton"/>
                <Button android:id="@+id/alarm_energy_system_mismatch" android:text="@string/nation_detection_alarm_energy_system_mismatch" style="@style/FactoryTestButton"/>
                <Button android:id="@+id/alarm_batt_bad_consistency" android:text="@string/nation_detection_alarm_batt_bad_consistency" style="@style/FactoryTestButton"/>
                <Button android:id="@+id/alarm_insulation" android:text="@string/nation_detection_alarm_insulation" style="@style/FactoryTestButton"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/FactoryTestRow">
                <Button android:id="@+id/alarm_dcdc_temp" android:text="@string/nation_detection_alarm_dcdc_temp" style="@style/FactoryTestButton"/>
                <Button android:id="@+id/alarm_brake_system" android:text="@string/nation_detection_alarm_brake_system" style="@style/FactoryTestButton"/>
                <Button android:id="@+id/alarm_dcdc_status" android:text="@string/nation_detection_alarm_dcdc_status" style="@style/FactoryTestButton"/>
                <Button android:id="@+id/alarm_motor_brake_temp" android:text="@string/nation_detection_alarm_motor_brake_temp" style="@style/FactoryTestButton"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/FactoryTestRow">
                <Button android:id="@+id/alarm_high_pressure_interlock" android:text="@string/nation_detection_alarm_high_pressure_interlock" style="@style/FactoryTestButton"/>
                <Button android:id="@+id/alarm_motor_temp" android:text="@string/nation_detection_alarm_motor_temp" style="@style/FactoryTestButton"/>
                <Button android:id="@+id/alarm_energy_storage_over_charge" android:text="@string/nation_detection_alarm_energy_storage_over_charge" style="@style/FactoryTestButton"/>
                <Button android:id="@+id/alarm_above_all" android:text="@string/nation_detection_alarm_above_all" style="@style/FactoryTestButton"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/FactoryTestRow">
                <Button android:id="@+id/return_main" android:text="@string/nation_detection_return_main" style="@style/FactoryTestButton"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
