<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="64dp" android:layout_centerVertical="true">
    <TextView android:textSize="@dimen/mobile_network_text" android:textColor="@android:color/white" android:gravity="center" android:id="@+id/network_on_off_header" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/network_on_off_test"/>
    <Switch android:id="@+id/switch_network_on_off" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginLeft="64dp" android:textOn="@string/switch_on" android:textOff="@string/switch_off" android:layout_toRightOf="@+id/network_on_off_header" android:layout_centerVertical="true"/>
    <Button android:id="@+id/on_off_success_bt" android:layout_width="140dp" android:layout_height="match_parent" android:layout_marginRight="16dp" android:text="@string/test_succeed" android:layout_toLeftOf="@+id/on_off_fail_bt" android:layout_centerVertical="true" android:onClick="onResult" style="@style/ItemTestButton"/>
    <Button android:id="@+id/on_off_fail_bt" android:layout_width="140dp" android:layout_height="match_parent" android:layout_marginRight="16dp" android:text="@string/test_fail" android:layout_toLeftOf="@+id/result_on_off_tv" android:layout_centerVertical="true" android:onClick="onResult" style="@style/ItemTestButton"/>
    <TextView android:textSize="@dimen/mobile_network_text" android:gravity="center" android:id="@+id/result_on_off_tv" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_alignParentRight="true"/>
</RelativeLayout>
